--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                 alt="Написание верстки"
                 width="370"
               />
+              <div class="work-model">
+                <p class="work-model-text">Десктопные приложения</p>
+              </div>
             </li>
             <li class="work-item">
               <img
@@ -126,6 +129,9 @@
               "
                 width="370"
               />
+              <div class="work-model">
+                <p class="work-model-text">Мобильные приложения</p>
+              </div>
             </li>
             <li class="work-item">
               <img
@@ -134,6 +140,9 @@
               "
                 width="370"
               />
+              <div class="work-model">
+                <p class="work-model-text">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
