--- a/index.html
+++ b/index.html
@@ -371,37 +371,37 @@
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-icon">
-                  <use href="images/svg/sprite.svg#icon-Logo1"></use></svg
+                  <use href="images/svg/sprite.svg#icon-client1"></use></svg
               ></a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link"
                 ><svg class="customers-icon">
-                  <use href="images/svg/sprite.svg#icon-Logo2"></use></svg
+                  <use href="images/svg/sprite.svg#icon-client2"></use></svg
               ></a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-icon">
-                  <use href="images/svg/sprite.svg#icon-Logo3"></use></svg
+                  <use href="images/svg/sprite.svg#icon-client3"></use></svg
               ></a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link"
                 ><svg class="customers-icon">
-                  <use href="images/svg/sprite.svg#icon-Logo4"></use></svg
+                  <use href="images/svg/sprite.svg#icon-client4"></use></svg
               ></a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link"
                 ><svg class="customers-icon">
-                  <use href="images/svg/sprite.svg#icon-Logo5"></use></svg
+                  <use href="images/svg/sprite.svg#icon-client5"></use></svg
               ></a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
                 <svg class="customers-icon">
-                  <use href="images/svg/sprite.svg#icon-Logo6"></use></svg
+                  <use href="images/svg/sprite.svg#icon-client6"></use></svg
               ></a>
             </li>
           </ul>
