--- a/portfolio.html
+++ b/portfolio.html
@@ -283,7 +283,7 @@
       </section>
       <!-- footer -->
       <footer class="down">
-        <div class="conteiner">
+        <div class="conteiner flex-box">
           <ul class="down-link">
             <li>
               <!--  -->
@@ -354,6 +354,23 @@
               </div>
             </li>
           </ul>
+          <div class="footer-email">
+            <h2 class="footer-email-header">Подпишитесь на рассылку</h2>
+            <label class="footer-label">
+              <input
+                type="email"
+                name="mail"
+                class="footer-input"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="footer-submit">
+              Подписаться
+              <svg class="footer-submit-svg">
+                <use href="./images/svg/sprite.svg#icon-send-1"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </footer>
     </main>
